# agent-loop

./: .env.example  .gitignore  README.md  config.example.json  package.json  pnpm-lock.yaml
rust/: Cargo.toml
rust/src/: config.rs  executor.rs  filter.rs  main.rs  subscriber.rs  types.rs  wasm_host.rs
rust/src/reporter/: console.rs  mod.rs
src/: cli.ts  config.ts  executor.ts  index.ts  subscriber.ts  types.ts
src/reporters/: base.ts  console-reporter.ts  index.ts
wasm-plugins/console-reporter/: Cargo.toml
wasm-plugins/console-reporter/src/: lib.rs
wasm-plugins/security-filter/: Cargo.toml
wasm-plugins/security-filter/src/: lib.rs
