[package]
name = "agent-loop"
version = "1.0.0"
edition = "2021"
description = "Loop 本地 Claude Code CLI 事件监听与执行器"

[[bin]]
name = "agent-loop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dotenvy = "0.15"
dirs = "5"
chrono = "0.4"
async-trait = "0.1"
anyhow = "1"
regex = "1"
wasmtime = { version = "29", default-features = false, features = ["cranelift", "runtime", "std"] }
